<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="fill"
        android:padding="20dp"
        android:src="@drawable/x"
        android:contentDescription="@string/x_logo_icon_description_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/join_x_today"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/join_text_additional"/>

    <Button
        android:id="@+id/main_create_account"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_forgot_button"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/main_log_in"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_x_button"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:textSize="20sp"/>
</LinearLayout>